Fix layout issue with flex columns in Safari 9

--- a/_sass/local/_layout.scss
+++ b/_sass/local/_layout.scss
@@ -134,9 +134,9 @@
   flex-wrap: wrap;
   
   #{$child-selector} {
-    -webkit-flex: 1;
-    flex: 1;
-    min-width: calc(100% / #{$columns} - #{$gutter-width});
+    -webkit-flex: 1 1 auto;
+    flex: 1 1 auto;
+    width: calc(100% / #{$columns} - #{$gutter-width});
   
     &:nth-of-type(#{$columns}n+1) {
       margin-left: 0;
